force-app/main/default/objects/ServiceAppointment/fields/AI_Analysis_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>AI_Analysis_Generated_Date__c</fullName>
    <label>AI Analysis Generated Date</label>
    <description>Datetime when the AI agent last generated the flag explanation and next steps for this appointment.</description>
    <type>DateTime</type>
</CustomField>