force-app/main/default/objects/ServiceAppointment/fields/AI_Flag_Explanation__c.field-meta.xml
<CustomField>
    <fullName>AI_Flag_Explanation__c</fullName>
    <label>AI Flag Explanation</label>
    <description>Natural-language explanation of why this appointment was flagged for follow-up, generated by the AI agent.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>