force-app/main/default/objects/ServiceAppointment/fields/AI_Recommended_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>AI_Recommended_Next_Steps__c</fullName>
    <label>AI Recommended Next Steps</label>
    <description>Recommended next-step actions generated by the AI agent based on the flag analysis.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>