force-app/main/default/objects/ServiceAppointment/fields/Auto_Completed__c.field-meta.xml
<CustomField>
    <fullName>Auto_Completed__c</fullName>
    <label>Auto Completed</label>
    <description>Checked when agent automatically completes this appointment via telematics check</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>