force-app/main/default/objects/ServiceAppointment/fields/Computed_Priority__c.field-meta.xml
<CustomField>
    <fullName>Computed_Priority__c</fullName>
    <label>Computed Priority</label>
    <description>Priority level computed by ServicePriorityHelper (Urgent/High/Medium/Low). Updated on dashboard load.</description>
    <type>Text</type>
    <length>20</length>
</CustomField>