force-app/main/default/objects/ServiceAppointment/fields/Computed_Signal_Summary__c.field-meta.xml
<CustomField>
    <fullName>Computed_Signal_Summary__c</fullName>
    <label>Computed Signal Summary</label>
    <description>Plain-text summary of the detection signals that fired for this appointment. Updated on dashboard load.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>